--- a/vignettes/MINOTAUR_vignette.Rmd
+++ b/vignettes/MINOTAUR_vignette.Rmd
@@ -10,7 +10,7 @@ vignette: >
 ---
 
 ## Introduction
-MINOTAUR is a R package for identifying and visualizing multivariate outliers in general, but is tailored towards researchers seeking to identify genetic loci that are under natural selection or that are putative underlying phenotypic traits. Methodologies targeting these answers typically use whole-genome sequencing or reduced marker datasets from population-level sampling and infer one or more meaningful statistics, including population genetic statistics, genotype by environment statistics, and genome-wide association statistics. In effect, generating these statistics from loci spread throughout a genome allows a geneticist to scan for loci or regions of the genome where a statistic behaves aberantly in comparison with the genome-wide background. 
+MINOTAUR is a R package for identifying and visualizing multivariate outliers in general, but is tailored towards researchers seeking to identify genetic loci that are under natural selection or that are putative underlying phenotypic traits. Methodologies targeting these answers typically use whole-genome sequencing or reduced marker datasets from population-level sampling and infer one or more meaningful statistics, including population genetic statistics, genotype by environment statistics, and genome-wide association statistics. In effect, generating these statistics from loci spread throughout a genome allows a geneticist to scan for loci or regions of the genome where a statistic behaves aberantly in comparison with the genome-wide background.
 
 Studies are increasingly generating several statistics across one or more broad inferential classes, and a common practice thus far has been to look across statistics to identify candidate genes for further investigation, essentially enriching for loci with outlier values for several statistics. The largely ad hoc nature of this decision making process and the fact that certain statistics enjoy more power under particular evolutionary scenarios or sampling designs collectively indicate that these methods can be biased and can suffer from high error rates. MINOTAUR was designed to help identify candidate genomic loci or regions by leveraging values from several statistics to identify outliers in multi-dimensional space. The core goal of this package is to introduce multivariate distance measures that can be used in conjunction with genomic scan data. Moreover, MINOTAUR aids in outlier visualization using the R Shiny interface, proving an intuitve, interactive GUI environment to explore univariate and multivariate data.
 
@@ -60,12 +60,12 @@ The MINOTAUR package includes four functions for inferring multivariate distance
 ### Calculating Mulitvariate Statistics using Stand-alone Functions
 While the four MINOTAUR multivariate statistics can be calculated within the MINOTAUR GUI, users may sometimes wish to calculate them outside of the GUI. Users would normally load their own dataframe from an CSV/TSV or Rdata file. Here data will be created using the `rnorm` function.
 
-```{r warning=FALSE, message=FALSE, fig.width=5, fig.height=5}
+```{r warning=FALSE, message=FALSE, fig.width=7, fig.height=7}
 # load MINOTAUR
 library(MINOTAUR)
 # set the number of observations (e.g., loci)
 observations <- 1000
-# set arbitrary observation IDs using seq 
+# set arbitrary observation IDs using seq
 # (to mimic positional metadata normally found in genome-wide data)
 obsID <- seq(1, observations, by=1)
 # generate distributions using rnorm for 5 variables (e.g., statistics)
@@ -118,73 +118,73 @@ The MINOTAUR GUI will then open in your default internet browser. This may take 
 ##### Overview
 The **Welcome** page will greet you and includes a brief overview on the package and some basic navigation instructions.
 
-*insert image of welcome page*
+![Welcome Page](1_WelcomePage.jpg)
 
 Along the left-hand side of the window is a series of tabs allowing the user to move through the MINOTAUR menus. The **Data** tab is used to load and format data. The **Outlier Detection** tab is used to calculate multivariate measures using the data. Finally, the **Produce Plots** tab provides a series of useful plots for visualizing both univariate and multivariate distributions and outliers. Throughout this example, these menus will appear in **bold** and any submenus will appear in *italics*.
 
-*insert image of the menu*
+![MINOTAUR Overall Menu](2_Menu.jpg)
 
 ##### Inputing and Filtering Data
 
-To get started, data must first be leaded into the GUI. Clicking on **Data** and *Input Data* will take the user to a menu for this. Users can select between using example data or uploading their own data from text files or an Rdata object. For this example, we will be using the 'Human GWAS' example dataset, which is simulated data that mimics what would be produced during a GWAS study (much like the simulated data we generated above). 
+To get started, data must first be leaded into the GUI. Clicking on **Data** and *Input Data* will take the user to a menu for this. Users can select between using example data or uploading their own data from text files or an Rdata object. For this example, we will be using the 'Human GWAS' example dataset, which is simulated data that mimics what would be produced during a GWAS study (much like the simulated data we generated above).
 
-*image of load data menu*
+![Load Data Menu](3_LoadDataMenu.jpg)
 
 When any dataset is selected or uploaded, the number of rows and columns will be reported to the right, above an interactive raw data table or a summary table.
 
-*image of data summary*
+![Input Data Summary](4_DataSummary.jpg)
 
 Before proceeding to outlier detection, we will first do some data formatting in the *Format Data* submenu. This allows the user to first set position (i.e., bp) and grouping (i.e., chromosome) variables, which is useful for later plotting. For this dataset, the position variable is 'BP' and the grouping variable is 'Chr'.
 
-*image of menu with correct settings*
+![Identifying Location Variables](5_IdentifyPositions.jpg)
 
 Users can also subset data a number of ways. First, one can decide which data variables (columns) to carry forward in the GUI by unselecting the 'Use all remaining variables' checkbox. The user can add variables and decide whether to retain or remove them from the dataset. Users also have the option of removing missing data in the form of 'NA', 'NaN', and '+/-Inf'. Missing data is prohibited in any MINOTAUR multivariate functions, so care should be taken to use these options and any other means to eliminate missing data. In this example, we will keep only the beta-distributed trait measurements ('TraitN_Beta') and will remove any forms of missing data (check all boxes).
 
-*image of menu with correct settings*
+![Data Filtering Options](6_FilterDataOptions.jpg)
 
 To the right, some useful information is displayed. Along the top is a plot of the breakdown of data across grouping variables (e.g., the number of SNPs on each chromosome). Along the bottom is a view of the final data table with variables and missing data excluded.
 
-*insert image of this*
+![Filtered Data Summary](7_FilterDataSummaries.jpg)
 
 ##### Calculating Multivariate Measurements
 
 The next major step in the MINOTAUR workflow is to calculate multivariate composite measures. By clicking on **Outlier Detection** and *Find Outliers* the user is brought to a series of menus to do this. Along the left side is a tabbed menu for generating and summarizing any multivariate measures. The summary table will appear blank at first, and multivariate measures can be added using either the 'Distance-Based' or 'Density-Based' tabs, which reflect the general manner multivariate measurements are made.
 
-Under the 'Distance-Based' tab, the user has the ability to use the Mahalanobis, Harmonic Mean, and Nearest Neighbor distances. For each, the user should select the three retained variables ('TraitN_Beta') and the desired distance measurement. Upon clicking the 'Calculate!' button, the distance measure is calculated and a histogram of the measure across all loci is displayed to the right. Below, users can input a name for the measure, which becomes the variable name for the data generated, and a brief description. The user should, one at a time, calculate distance based measures for all three distances using the three traits and appropriate names and descriptions. 
+Under the 'Distance-Based' tab, the user has the ability to use the Mahalanobis, Harmonic Mean, and Nearest Neighbor distances. For each, the user should select the three retained variables ('TraitN_Beta') and the desired distance measurement. Upon clicking the 'Calculate!' button, the distance measure is calculated and a histogram of the measure across all loci is displayed to the right. Below, users can input a name for the measure, which becomes the variable name for the data generated, and a brief description. The user should, one at a time, calculate distance based measures for all three distances using the three traits and appropriate names and descriptions.
 
-*pic of correct menu*
+![Distance-Based Methods Options](8_DistanceOptions.jpg)
 
-The same general options also appear under the 'Density-Based' tab, which is used to generate Kernel Density measurements. The user must also select a the 'Bandwidth estimation method' used to calculate the kernel size. Options are using an appropriate bandwidth for the data based on Silverman's rule (default), setting a custom bandwidth, and using maximum likelihood to determine the optimal bandwidth to use (time consuming). For this tutorial, selecting the 'default' option is fine.
+The same general options also appear under the 'Density-Based' tab, which is used to generate Kernel Density measurements. The user must also select a the 'Bandwidth estimation method' used to calculate the kernel size. Options include using an appropriate bandwidth for the data based on Silverman's rule (default), setting a custom bandwidth, and using maximum likelihood to determine the optimal bandwidth to use (much more time consuming). For this dataset the maximum likelihood estimate of the best bandwidth is 0.01, so we will set a custom bandwidth with that value.
 
-*pic of correct menu*
+![Density-Based Methods Options](9_DensityOptions.jpg)
 
-Between each, the user will notice that the summary table reporting multivariate measures will be populated. Users can use the menu near the bottom of the 'Summary' tab to both replot and delete any generated multivariate measures.
+Between each, the user will notice that the summary table reporting multivariate measures will be populated. Users can use the menu near the bottom of the 'Summary' tab to both replot histograms and delete any generated multivariate measurements.
 
-*pic of populated table*
+![Multivariate Measures Table](10_MultivariateTable.jpg)
 
 ##### Visualizing Multivariate Distributions & Outliers
 
 Finally, now that multivariate measures have been calculated, the user can proceed to generating plots and visually exploring the data. The submenus beneath **Produce Plots** include the plot type available in MINOTAUR. To demonstrate the general options available to the user when plotting, we will create a Manhattan plot of our multivariate measures using the *Linear Manhattan Plot* submenu.
 
-Each plotting submenu contains two options menus and the resulting plot. The 'Select Variables' menu is used to manipulate what data are being plotted on each axis, plus intuitive, general attributes about the axes themselves. Under 'Select y-axis' we will select the output of our Mahalanobis calculation (called 'Md') to display a Manhattan plot of this distance across all loci in the dataset. 
+Each plotting submenu contains two options menus and the resulting plot. The 'Select Variables' menu is used to manipulate what data are being plotted on each axis, plus intuitive, general attributes about the axes themselves. Under 'Select y-axis' we will select the output of our Nearest Neighbord Distance calculation (called 'Nd') to display a Manhattan plot of this distance across all loci in the dataset.
 
-*pic of options*
+![Axes Variable Options](11_AxisOptions.jpg)
 
-The 'Select outlier variable' gives us the ability to color points based on their position in the variable distribution (i.e., color outliers). In this circumstance, it makes the most sense to color the highest (upper) 1% tail of the Mahalanobis distance, which represents those loci whose multivariate Mahalanobis distance is the greatest.
+The 'Select outlier variable' gives us the ability to color points based on their position in the variable distribution (i.e., color outliers). In this circumstance, it makes the most sense to color the highest (upper) 1% tail of the Nearest Neighbor Distance, which represents those loci whose multivariate nearest neighbor distance distance is the greatest.
 
-*pic of options*
+![Outlier Highlighting Options](12_OutlierOptions.jpg)
 
 The 'Adjust Plot Aesthetics' menu provides numerous, intutive aesthetic options for the resulting plot. Here is a menu configuration that provides an intuitive Manhattan plot with outliers obviously indicated.
 
-*aesthetic options pic*
+![Plot Aesthetics Menu](13_AesthOptions.jpg)
 
 And here is the resulting plot based on these options.
 
-*Mahalanobis manhattan plot*
+![Resulting Manhattan Plot](14_NdPlot.jpg)
 
 Part of the beauty of the MINOTAUR GUI is that multiple, stacked plots can be made, and when the plotting menus are collapsed, it provides the user with the ability to visually compare how various univariate and multivariate measures performed with the data, resulting in a figure like the following.
 
-*pic of stacked manhattan plots*
+![Stacked Manhattan Plots](15_StackedPlots.jpg)
 
 Users will see these general plotting options on the other plotting submenus and can use them to generate an array of plots that are useful for exploring their data.
 
